# bitcoin

./: Cargo.toml
src/: components.rs  events.rs  lib.rs  pages.rs  plugin.rs  serde.rs  service.rs  wallet.rs
src/components/: amount_display.rs  button.rs  data_item.rs  list_item.rs  numeric_keypad.rs  qr_code.rs  qr_scanner.rs
src/service/: price.rs  sync.rs
